[gd_scene load_steps=3 format=2]

[ext_resource path="res://main_menu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelHost" type="Panel" parent="."]
editor/display_folded = true
margin_left = 10.0
margin_top = 150.0
margin_right = 301.0
margin_bottom = 310.0

[node name="Label" type="Label" parent="PanelHost"]
margin_left = 100.0
margin_top = 10.0
margin_right = 185.0
margin_bottom = 24.0
text = "Create Server"

[node name="Label2" type="Label" parent="PanelHost"]
margin_left = 10.0
margin_top = 30.0
margin_right = 90.0
margin_bottom = 44.0
text = "Server name"

[node name="txtServerName" type="LineEdit" parent="PanelHost"]
margin_left = 10.0
margin_top = 44.0
margin_right = 282.0
margin_bottom = 68.0

[node name="Label3" type="Label" parent="PanelHost"]
margin_left = 10.0
margin_top = 80.0
margin_right = 50.0
margin_bottom = 94.0
text = "Port"

[node name="txtServerPort" type="LineEdit" parent="PanelHost"]
margin_left = 10.0
margin_top = 94.0
margin_right = 72.0
margin_bottom = 118.0
text = "4546"

[node name="Label4" type="Label" parent="PanelHost"]
margin_left = 93.0
margin_top = 80.0
margin_right = 201.0
margin_bottom = 94.0
text = "Max connections"

[node name="txtMaxPlayers" type="SpinBox" parent="PanelHost"]
margin_left = 93.0
margin_top = 94.0
margin_right = 167.0
margin_bottom = 118.0
min_value = 2.0
max_value = 16.0
value = 6.0

[node name="btCreate" type="Button" parent="PanelHost"]
margin_left = 230.0
margin_top = 130.0
margin_right = 283.0
margin_bottom = 150.0
text = "Create"

[node name="PanelJoin" type="Panel" parent="."]
editor/display_folded = true
margin_left = 10.0
margin_top = 316.0
margin_right = 301.0
margin_bottom = 426.0

[node name="Label" type="Label" parent="PanelJoin"]
margin_left = 110.0
margin_top = 10.0
margin_right = 177.0
margin_bottom = 24.0
text = "Join Server"

[node name="Label2" type="Label" parent="PanelJoin"]
margin_left = 8.0
margin_top = 30.0
margin_right = 28.0
margin_bottom = 44.0
text = "IP"

[node name="txtJoinIP" type="LineEdit" parent="PanelJoin"]
margin_left = 8.0
margin_top = 44.0
margin_right = 110.0
margin_bottom = 68.0
text = "127.0.0.1"

[node name="Label3" type="Label" parent="PanelJoin"]
margin_left = 130.0
margin_top = 30.0
margin_right = 160.0
margin_bottom = 44.0
text = "Port"

[node name="txtJoinPort" type="LineEdit" parent="PanelJoin"]
margin_left = 130.0
margin_top = 44.0
margin_right = 192.0
margin_bottom = 68.0
text = "4546"

[node name="btJoin" type="Button" parent="PanelJoin"]
margin_left = 230.0
margin_top = 80.0
margin_right = 283.0
margin_bottom = 100.0
text = "Join"

[node name="PanelPlayer" type="Panel" parent="."]
editor/display_folded = true
margin_left = 10.0
margin_top = 10.0
margin_right = 300.0
margin_bottom = 146.0

[node name="Label" type="Label" parent="PanelPlayer"]
margin_left = 10.0
margin_top = 6.0
margin_right = 93.0
margin_bottom = 20.0
text = "Player name:"

[node name="txtPlayerName" type="LineEdit" parent="PanelPlayer"]
margin_left = 10.0
margin_top = 26.0
margin_right = 280.0
margin_bottom = 50.0

[node name="Label2" type="Label" parent="PanelPlayer"]
margin_left = 90.0
margin_top = 66.0
margin_right = 130.0
margin_bottom = 80.0
text = "Color"

[node name="PlayerIcon" type="Sprite" parent="PanelPlayer"]
position = Vector2( 40, 96 )
texture = ExtResource( 2 )

[node name="btColor" type="ColorPickerButton" parent="PanelPlayer"]
margin_left = 90.0
margin_top = 86.0
margin_right = 148.0
margin_bottom = 106.0
color = Color( 1, 1, 1, 1 )

[node name="btDefaultColor" type="Button" parent="PanelPlayer"]
margin_left = 90.0
margin_top = 106.0
margin_right = 148.0
margin_bottom = 126.0
text = "Default"
[connection signal="pressed" from="PanelHost/btCreate" to="." method="_on_btCreate_pressed"]
[connection signal="pressed" from="PanelJoin/btJoin" to="." method="_on_btJoin_pressed"]
